# mantisAICore

./: CMakeLists.txt  README.md  aarch64-toolchain.cmake  autobuild.sh  compile_proto.sh  compiler.tar.xz
build-aarch64/: CMakeCache.txt  Makefile  cmake_install.cmake  main
build-x86/: CMakeCache.txt  Makefile  cmake_install.cmake
build_x86/: CMakeCache.txt  Makefile  cmake_install.cmake  main
include/: .thread_pool.h.un~  command_utils.h  ethernet_driver.h  services.h  socket_utils.h  thread_pool.h
include/network/: ethernetPayload.h
proto/: protocol.pb.cc  protocol.pb.h  protocol.proto
src/: adam.cpp  main.cpp  sender.cpp
src/network/: ethernetPayload.cpp
test/: grid  grid.cpp
test/cuda_testing/: mmult  mmult.cu  mmult_cpu.cpp  python_test.py
